--- a/simulate_cgm_pred_mean.ipynb
+++ b/simulate_cgm_pred_mean.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/evelynlin2121/eacbbcedd2cebe6c82237a3d30463f28/simulate_cgm_pred_mean.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8AvzVVN-Hx_a"
       },
       "source": [
@@ -5150,7 +5160,8 @@
       "toc_visible": true,
       "provenance": [],
       "mount_file_id": "1WDoRdsrxHGjm-Xcz5al0qC5qumrlRClX",
-      "authorship_tag": "ABX9TyO8MeKnmWTcTZcDd03nFJti"
+      "authorship_tag": "ABX9TyO8MeKnmWTcTZcDd03nFJti",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
